Added dataset generator

--- a/code/RegularExpressionSandbox.ipynb
+++ b/code/RegularExpressionSandbox.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Regular Expression Dataset Generation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Utilities\n",
+    "### Definitions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
@@ -15,120 +30,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 124,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def all_strings(n, alphabet):\n",
-    "    for s in product(alphabet, repeat=n):\n",
-    "        yield ''.join(s)"
+    "def all_strings(max_length, alphabet):\n",
+    "    \"\"\"Returns a generator of all strings up to a given length from an alphabet\"\"\"\n",
+    "    for length in range(max_length + 1):\n",
+    "        for s in product(alphabet, repeat=length):\n",
+    "            yield ''.join(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "re.compile(r'o[gh]', re.UNICODE)"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pattern = re.compile(\"o[gh]\")\n",
-    "pattern"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Not a valid pattern\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    pattern = re.compile(\"o[gh\")\n",
-    "    print(\"A valid pattern\")\n",
-    "except:\n",
-    "    print(\"Not a valid pattern\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<_sre.SRE_Match object; span=(0, 2), match='og'>\n",
-      "None\n",
-      "None\n",
-      "<_sre.SRE_Match object; span=(1, 3), match='og'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(pattern.fullmatch(\"og\"))\n",
-    "print(pattern.fullmatch(\"dog\"))\n",
-    "print(pattern.fullmatch(\"ogre\"))\n",
-    "print(pattern.fullmatch(\"doggie\", 1, 3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['og', 'oh']"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "match_2 = [string for string in all_strings(2, ascii_letters) if pattern.fullmatch(string)]\n",
-    "match_2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 125,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def extract_valid_regexes(candidates):\n",
+    "    \"\"\"Takes a generator of strings and returns a generator of compiled valid regexes\"\"\"\n",
     "    for c in candidates:\n",
     "        try:\n",
     "            yield re.compile(c)\n",
@@ -138,7 +62,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 126,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def all_regexes(max_length, alphabet):\n",
+    "    \"\"\"Returns a generator of all valid regexes up to a length from an alphabet\"\"\"\n",
+    "    return extract_valid_regexes(all_strings(max_length, alphabet))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['', 'a', 'b', 'aa', 'ab', 'ba', 'bb']\n",
+      "[re.compile(''), re.compile('a'), re.compile('b'), re.compile('|'), re.compile('aa'), re.compile('ab')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(all_strings(2, \"ab\")))\n",
+    "print(list(all_regexes(3, \"ab|*\"))[:6])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dataset Generation\n",
+    "### Definitions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def regex_apply_all(regex, max_length, alphabet):\n",
+    "    \"\"\"Returns a generator that takes a compiled regex and yields\n",
+    "    tuples for every string of length from alphabet with whether\n",
+    "    or not it matches the regex\"\"\"\n",
+    "    for string in all_strings(max_length, alphabet):\n",
+    "        yield (string, bool(regex.fullmatch(string)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def dataset_size_bound(regex_max_length, string_max_length, alphabet, regex_chars):\n",
+    "    count_regexes = sum(len(alphabet + regex_chars) ** length for length in range(regex_max_length + 1))\n",
+    "    count_strings = sum(len(alphabet) ** length for length in range(string_max_length + 1))\n",
+    "    return count_regexes * count_strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def dataset_generator(regex_max_length, string_max_length, alphabet, regex_chars):\n",
+    "    \"\"\"Returns a generator that gives for every regex-string pair\n",
+    "    up to a length whether or not they match\"\"\"\n",
+    "    for regex in all_regexes(regex_max_length, alphabet + regex_chars):\n",
+    "        for string in all_strings(string_max_length, alphabet):\n",
+    "            yield (regex.pattern, string, bool(regex.fullmatch(string)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
    "metadata": {
     "collapsed": false
    },
@@ -146,55 +172,27 @@
     {
      "data": {
       "text/plain": [
-       "[re.compile(r'aaa', re.UNICODE),\n",
-       " re.compile(r'aab', re.UNICODE),\n",
-       " re.compile(r'aac', re.UNICODE),\n",
-       " re.compile(r'aad', re.UNICODE),\n",
-       " re.compile(r'aa|', re.UNICODE),\n",
-       " re.compile(r'aa*', re.UNICODE)]"
+       "[('', False),\n",
+       " ('a', True),\n",
+       " ('b', False),\n",
+       " ('aa', True),\n",
+       " ('ab', False),\n",
+       " ('ba', False),\n",
+       " ('bb', False)]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "char_count = 4 # Must be < 2 * 26\n",
-    "characters = ascii_letters[:char_count]\n",
-    "alphabet = characters + \"()|*\"\n",
-    "possible_strings = list(all_strings(3, characters))\n",
-    "possible_regexes = all_strings(3, alphabet)\n",
-    "valid_regexes = list(extract_valid_regexes(possible_regexes))\n",
-    "valid_regexes[0:6]"
+    "list(regex_apply_all(re.compile(r'a|aa'), 2, \"ab\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "reg = re.compile('|||') # Note that this is a valid regex"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def gen_valid_regexes(length, alphabet):\n",
-    "    return extract_valid_regexes(all_strings(length, alphabet))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 146,
    "metadata": {
     "collapsed": false
    },
@@ -202,31 +200,340 @@
     {
      "data": {
       "text/plain": [
-       "[re.compile(r'aaaa', re.UNICODE),\n",
-       " re.compile(r'aaab', re.UNICODE),\n",
-       " re.compile(r'aaac', re.UNICODE),\n",
-       " re.compile(r'aaad', re.UNICODE),\n",
-       " re.compile(r'aaa|', re.UNICODE),\n",
-       " re.compile(r'aaa*', re.UNICODE)]"
+       "[('', '', True),\n",
+       " ('', 'a', False),\n",
+       " ('', 'b', False),\n",
+       " ('', 'aa', False),\n",
+       " ('', 'ab', False),\n",
+       " ('', 'ba', False),\n",
+       " ('', 'bb', False),\n",
+       " ('a', '', False),\n",
+       " ('a', 'a', True),\n",
+       " ('a', 'b', False),\n",
+       " ('a', 'aa', False),\n",
+       " ('a', 'ab', False),\n",
+       " ('a', 'ba', False),\n",
+       " ('a', 'bb', False),\n",
+       " ('b', '', False),\n",
+       " ('b', 'a', False),\n",
+       " ('b', 'b', True),\n",
+       " ('b', 'aa', False),\n",
+       " ('b', 'ab', False),\n",
+       " ('b', 'ba', False),\n",
+       " ('b', 'bb', False),\n",
+       " ('|', '', True),\n",
+       " ('|', 'a', False),\n",
+       " ('|', 'b', False),\n",
+       " ('|', 'aa', False),\n",
+       " ('|', 'ab', False),\n",
+       " ('|', 'ba', False),\n",
+       " ('|', 'bb', False),\n",
+       " ('aa', '', False),\n",
+       " ('aa', 'a', False),\n",
+       " ('aa', 'b', False),\n",
+       " ('aa', 'aa', True),\n",
+       " ('aa', 'ab', False),\n",
+       " ('aa', 'ba', False),\n",
+       " ('aa', 'bb', False),\n",
+       " ('ab', '', False),\n",
+       " ('ab', 'a', False),\n",
+       " ('ab', 'b', False),\n",
+       " ('ab', 'aa', False),\n",
+       " ('ab', 'ab', True),\n",
+       " ('ab', 'ba', False),\n",
+       " ('ab', 'bb', False),\n",
+       " ('a|', '', True),\n",
+       " ('a|', 'a', True),\n",
+       " ('a|', 'b', False),\n",
+       " ('a|', 'aa', False),\n",
+       " ('a|', 'ab', False),\n",
+       " ('a|', 'ba', False),\n",
+       " ('a|', 'bb', False),\n",
+       " ('ba', '', False),\n",
+       " ('ba', 'a', False),\n",
+       " ('ba', 'b', False),\n",
+       " ('ba', 'aa', False),\n",
+       " ('ba', 'ab', False),\n",
+       " ('ba', 'ba', True),\n",
+       " ('ba', 'bb', False),\n",
+       " ('bb', '', False),\n",
+       " ('bb', 'a', False),\n",
+       " ('bb', 'b', False),\n",
+       " ('bb', 'aa', False),\n",
+       " ('bb', 'ab', False),\n",
+       " ('bb', 'ba', False),\n",
+       " ('bb', 'bb', True),\n",
+       " ('b|', '', True),\n",
+       " ('b|', 'a', False),\n",
+       " ('b|', 'b', True),\n",
+       " ('b|', 'aa', False),\n",
+       " ('b|', 'ab', False),\n",
+       " ('b|', 'ba', False),\n",
+       " ('b|', 'bb', False),\n",
+       " ('|a', '', True),\n",
+       " ('|a', 'a', True),\n",
+       " ('|a', 'b', False),\n",
+       " ('|a', 'aa', False),\n",
+       " ('|a', 'ab', False),\n",
+       " ('|a', 'ba', False),\n",
+       " ('|a', 'bb', False),\n",
+       " ('|b', '', True),\n",
+       " ('|b', 'a', False),\n",
+       " ('|b', 'b', True),\n",
+       " ('|b', 'aa', False),\n",
+       " ('|b', 'ab', False),\n",
+       " ('|b', 'ba', False),\n",
+       " ('|b', 'bb', False),\n",
+       " ('||', '', True),\n",
+       " ('||', 'a', False),\n",
+       " ('||', 'b', False),\n",
+       " ('||', 'aa', False),\n",
+       " ('||', 'ab', False),\n",
+       " ('||', 'ba', False),\n",
+       " ('||', 'bb', False),\n",
+       " ('aaa', '', False),\n",
+       " ('aaa', 'a', False),\n",
+       " ('aaa', 'b', False),\n",
+       " ('aaa', 'aa', False),\n",
+       " ('aaa', 'ab', False),\n",
+       " ('aaa', 'ba', False),\n",
+       " ('aaa', 'bb', False),\n",
+       " ('aab', '', False),\n",
+       " ('aab', 'a', False),\n",
+       " ('aab', 'b', False),\n",
+       " ('aab', 'aa', False),\n",
+       " ('aab', 'ab', False),\n",
+       " ('aab', 'ba', False),\n",
+       " ('aab', 'bb', False),\n",
+       " ('aa|', '', True),\n",
+       " ('aa|', 'a', False),\n",
+       " ('aa|', 'b', False),\n",
+       " ('aa|', 'aa', True),\n",
+       " ('aa|', 'ab', False),\n",
+       " ('aa|', 'ba', False),\n",
+       " ('aa|', 'bb', False),\n",
+       " ('aba', '', False),\n",
+       " ('aba', 'a', False),\n",
+       " ('aba', 'b', False),\n",
+       " ('aba', 'aa', False),\n",
+       " ('aba', 'ab', False),\n",
+       " ('aba', 'ba', False),\n",
+       " ('aba', 'bb', False),\n",
+       " ('abb', '', False),\n",
+       " ('abb', 'a', False),\n",
+       " ('abb', 'b', False),\n",
+       " ('abb', 'aa', False),\n",
+       " ('abb', 'ab', False),\n",
+       " ('abb', 'ba', False),\n",
+       " ('abb', 'bb', False),\n",
+       " ('ab|', '', True),\n",
+       " ('ab|', 'a', False),\n",
+       " ('ab|', 'b', False),\n",
+       " ('ab|', 'aa', False),\n",
+       " ('ab|', 'ab', True),\n",
+       " ('ab|', 'ba', False),\n",
+       " ('ab|', 'bb', False),\n",
+       " ('a|a', '', False),\n",
+       " ('a|a', 'a', True),\n",
+       " ('a|a', 'b', False),\n",
+       " ('a|a', 'aa', False),\n",
+       " ('a|a', 'ab', False),\n",
+       " ('a|a', 'ba', False),\n",
+       " ('a|a', 'bb', False),\n",
+       " ('a|b', '', False),\n",
+       " ('a|b', 'a', True),\n",
+       " ('a|b', 'b', True),\n",
+       " ('a|b', 'aa', False),\n",
+       " ('a|b', 'ab', False),\n",
+       " ('a|b', 'ba', False),\n",
+       " ('a|b', 'bb', False),\n",
+       " ('a||', '', True),\n",
+       " ('a||', 'a', True),\n",
+       " ('a||', 'b', False),\n",
+       " ('a||', 'aa', False),\n",
+       " ('a||', 'ab', False),\n",
+       " ('a||', 'ba', False),\n",
+       " ('a||', 'bb', False),\n",
+       " ('baa', '', False),\n",
+       " ('baa', 'a', False),\n",
+       " ('baa', 'b', False),\n",
+       " ('baa', 'aa', False),\n",
+       " ('baa', 'ab', False),\n",
+       " ('baa', 'ba', False),\n",
+       " ('baa', 'bb', False),\n",
+       " ('bab', '', False),\n",
+       " ('bab', 'a', False),\n",
+       " ('bab', 'b', False),\n",
+       " ('bab', 'aa', False),\n",
+       " ('bab', 'ab', False),\n",
+       " ('bab', 'ba', False),\n",
+       " ('bab', 'bb', False),\n",
+       " ('ba|', '', True),\n",
+       " ('ba|', 'a', False),\n",
+       " ('ba|', 'b', False),\n",
+       " ('ba|', 'aa', False),\n",
+       " ('ba|', 'ab', False),\n",
+       " ('ba|', 'ba', True),\n",
+       " ('ba|', 'bb', False),\n",
+       " ('bba', '', False),\n",
+       " ('bba', 'a', False),\n",
+       " ('bba', 'b', False),\n",
+       " ('bba', 'aa', False),\n",
+       " ('bba', 'ab', False),\n",
+       " ('bba', 'ba', False),\n",
+       " ('bba', 'bb', False),\n",
+       " ('bbb', '', False),\n",
+       " ('bbb', 'a', False),\n",
+       " ('bbb', 'b', False),\n",
+       " ('bbb', 'aa', False),\n",
+       " ('bbb', 'ab', False),\n",
+       " ('bbb', 'ba', False),\n",
+       " ('bbb', 'bb', False),\n",
+       " ('bb|', '', True),\n",
+       " ('bb|', 'a', False),\n",
+       " ('bb|', 'b', False),\n",
+       " ('bb|', 'aa', False),\n",
+       " ('bb|', 'ab', False),\n",
+       " ('bb|', 'ba', False),\n",
+       " ('bb|', 'bb', True),\n",
+       " ('b|a', '', False),\n",
+       " ('b|a', 'a', True),\n",
+       " ('b|a', 'b', True),\n",
+       " ('b|a', 'aa', False),\n",
+       " ('b|a', 'ab', False),\n",
+       " ('b|a', 'ba', False),\n",
+       " ('b|a', 'bb', False),\n",
+       " ('b|b', '', False),\n",
+       " ('b|b', 'a', False),\n",
+       " ('b|b', 'b', True),\n",
+       " ('b|b', 'aa', False),\n",
+       " ('b|b', 'ab', False),\n",
+       " ('b|b', 'ba', False),\n",
+       " ('b|b', 'bb', False),\n",
+       " ('b||', '', True),\n",
+       " ('b||', 'a', False),\n",
+       " ('b||', 'b', True),\n",
+       " ('b||', 'aa', False),\n",
+       " ('b||', 'ab', False),\n",
+       " ('b||', 'ba', False),\n",
+       " ('b||', 'bb', False),\n",
+       " ('|aa', '', True),\n",
+       " ('|aa', 'a', False),\n",
+       " ('|aa', 'b', False),\n",
+       " ('|aa', 'aa', True),\n",
+       " ('|aa', 'ab', False),\n",
+       " ('|aa', 'ba', False),\n",
+       " ('|aa', 'bb', False),\n",
+       " ('|ab', '', True),\n",
+       " ('|ab', 'a', False),\n",
+       " ('|ab', 'b', False),\n",
+       " ('|ab', 'aa', False),\n",
+       " ('|ab', 'ab', True),\n",
+       " ('|ab', 'ba', False),\n",
+       " ('|ab', 'bb', False),\n",
+       " ('|a|', '', True),\n",
+       " ('|a|', 'a', True),\n",
+       " ('|a|', 'b', False),\n",
+       " ('|a|', 'aa', False),\n",
+       " ('|a|', 'ab', False),\n",
+       " ('|a|', 'ba', False),\n",
+       " ('|a|', 'bb', False),\n",
+       " ('|ba', '', True),\n",
+       " ('|ba', 'a', False),\n",
+       " ('|ba', 'b', False),\n",
+       " ('|ba', 'aa', False),\n",
+       " ('|ba', 'ab', False),\n",
+       " ('|ba', 'ba', True),\n",
+       " ('|ba', 'bb', False),\n",
+       " ('|bb', '', True),\n",
+       " ('|bb', 'a', False),\n",
+       " ('|bb', 'b', False),\n",
+       " ('|bb', 'aa', False),\n",
+       " ('|bb', 'ab', False),\n",
+       " ('|bb', 'ba', False),\n",
+       " ('|bb', 'bb', True),\n",
+       " ('|b|', '', True),\n",
+       " ('|b|', 'a', False),\n",
+       " ('|b|', 'b', True),\n",
+       " ('|b|', 'aa', False),\n",
+       " ('|b|', 'ab', False),\n",
+       " ('|b|', 'ba', False),\n",
+       " ('|b|', 'bb', False),\n",
+       " ('||a', '', True),\n",
+       " ('||a', 'a', True),\n",
+       " ('||a', 'b', False),\n",
+       " ('||a', 'aa', False),\n",
+       " ('||a', 'ab', False),\n",
+       " ('||a', 'ba', False),\n",
+       " ('||a', 'bb', False),\n",
+       " ('||b', '', True),\n",
+       " ('||b', 'a', False),\n",
+       " ('||b', 'b', True),\n",
+       " ('||b', 'aa', False),\n",
+       " ('||b', 'ab', False),\n",
+       " ('||b', 'ba', False),\n",
+       " ('||b', 'bb', False),\n",
+       " ('|||', '', True),\n",
+       " ('|||', 'a', False),\n",
+       " ('|||', 'b', False),\n",
+       " ('|||', 'aa', False),\n",
+       " ('|||', 'ab', False),\n",
+       " ('|||', 'ba', False),\n",
+       " ('|||', 'bb', False)]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(gen_valid_regexes(4, alphabet))[:6]"
+    "list(dataset_generator(3, 2, \"ab\", \"|\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11160198"
+      ]
+     },
+     "execution_count": 158,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(dataset_generator(3, 10, \"abc\", \"|*()\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "35429200"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset_size_bound(3, 10, \"abc\", \"|*()\")"
+   ]
   }
  ],
  "metadata": {
