--- a/code/RegularExpressionSandbox.ipynb
+++ b/code/RegularExpressionSandbox.ipynb
@@ -17,20 +17,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ischeinfeld/anaconda/lib/python3.6/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
+      "  from ._conv import register_converters as _register_converters\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "from itertools import product\n",
-    "from string import ascii_letters"
+    "from string import ascii_letters\n",
+    "import csv\n",
+    "import keras"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -82,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -111,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -127,13 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def dataset_size_bound(regex_max_length, string_max_length, alphabet, regex_chars):\n",
+    "    \"\"\"Returns an upper bound on the size of a dataset generated with the same parameters\"\"\"\n",
     "    count_regexes = sum(len(alphabet + regex_chars) ** length for length in range(regex_max_length + 1))\n",
     "    count_strings = sum(len(alphabet) ** length for length in range(string_max_length + 1))\n",
     "    return count_regexes * count_strings"
@@ -141,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -152,7 +165,7 @@
     "    up to a length whether or not they match\"\"\"\n",
     "    for regex in all_regexes(regex_max_length, alphabet + regex_chars):\n",
     "        for string in all_strings(string_max_length, alphabet):\n",
-    "            yield (regex.pattern, string, bool(regex.fullmatch(string)))"
+    "            yield regex.pattern, string, bool(regex.fullmatch(string))"
    ]
   },
   {
@@ -164,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +194,7 @@
        " ('bb', False)]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -482,7 +495,7 @@
        " ('|||', 'bb', False)]"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,29 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11160198"
-      ]
-     },
-     "execution_count": 158,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(list(dataset_generator(3, 10, \"abc\", \"|*()\")))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -526,7 +517,7 @@
        "35429200"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,6 +525,469 @@
    "source": [
     "dataset_size_bound(3, 10, \"abc\", \"|*()\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2214325"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(list(dataset_generator(2, 10, \"abc\", \"|*()\")))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Writing Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "max_regex_len = 2\n",
+    "max_string_len = 2\n",
+    "alphabet = \"abc\"\n",
+    "regex_chars = \"|*()\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Padded Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pad_char = \"_\"\n",
+    "embedding = dict(map(reversed, enumerate(pad_char + alphabet + regex_chars)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def embed(string, embedding, length, pad_char):\n",
+    "    padded_string = string.ljust(length, pad_char)[:length]\n",
+    "    return [embedding[char] for char in padded_string]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "regexes, strings, labels = zip(*dataset_generator(2, 2, \"abc\", \"|*()\"))\n",
+    "\n",
+    "X_r = [embed(string, embedding, max_regex_len, pad_char) for string in regexes]\n",
+    "X_s = [embed(string, embedding, max_string_len, pad_char) for string in strings]\n",
+    "y = [int(b) for b in y]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0, 0],\n",
+       " [0, 0],\n",
+       " [0, 0],\n",
+       " [0, 0],\n",
+       " [0, 0],\n",
+       " [0, 0],\n",
+       " [0, 0],\n",
+       " [0, 0],\n",
+       " [0, 0],\n",
+       " [0, 0],\n",
+       " [0, 0],\n",
+       " [0, 0],\n",
+       " [0, 0],\n",
+       " [1, 0],\n",
+       " [1, 0],\n",
+       " [1, 0],\n",
+       " [1, 0],\n",
+       " [1, 0],\n",
+       " [1, 0],\n",
+       " [1, 0],\n",
+       " [1, 0],\n",
+       " [1, 0],\n",
+       " [1, 0],\n",
+       " [1, 0],\n",
+       " [1, 0],\n",
+       " [1, 0],\n",
+       " [2, 0],\n",
+       " [2, 0],\n",
+       " [2, 0],\n",
+       " [2, 0],\n",
+       " [2, 0],\n",
+       " [2, 0],\n",
+       " [2, 0],\n",
+       " [2, 0],\n",
+       " [2, 0],\n",
+       " [2, 0],\n",
+       " [2, 0],\n",
+       " [2, 0],\n",
+       " [2, 0],\n",
+       " [3, 0],\n",
+       " [3, 0],\n",
+       " [3, 0],\n",
+       " [3, 0],\n",
+       " [3, 0],\n",
+       " [3, 0],\n",
+       " [3, 0],\n",
+       " [3, 0],\n",
+       " [3, 0],\n",
+       " [3, 0],\n",
+       " [3, 0],\n",
+       " [3, 0],\n",
+       " [3, 0],\n",
+       " [4, 0],\n",
+       " [4, 0],\n",
+       " [4, 0],\n",
+       " [4, 0],\n",
+       " [4, 0],\n",
+       " [4, 0],\n",
+       " [4, 0],\n",
+       " [4, 0],\n",
+       " [4, 0],\n",
+       " [4, 0],\n",
+       " [4, 0],\n",
+       " [4, 0],\n",
+       " [4, 0],\n",
+       " [1, 1],\n",
+       " [1, 1],\n",
+       " [1, 1],\n",
+       " [1, 1],\n",
+       " [1, 1],\n",
+       " [1, 1],\n",
+       " [1, 1],\n",
+       " [1, 1],\n",
+       " [1, 1],\n",
+       " [1, 1],\n",
+       " [1, 1],\n",
+       " [1, 1],\n",
+       " [1, 1],\n",
+       " [1, 2],\n",
+       " [1, 2],\n",
+       " [1, 2],\n",
+       " [1, 2],\n",
+       " [1, 2],\n",
+       " [1, 2],\n",
+       " [1, 2],\n",
+       " [1, 2],\n",
+       " [1, 2],\n",
+       " [1, 2],\n",
+       " [1, 2],\n",
+       " [1, 2],\n",
+       " [1, 2],\n",
+       " [1, 3],\n",
+       " [1, 3],\n",
+       " [1, 3],\n",
+       " [1, 3],\n",
+       " [1, 3],\n",
+       " [1, 3],\n",
+       " [1, 3],\n",
+       " [1, 3],\n",
+       " [1, 3],\n",
+       " [1, 3],\n",
+       " [1, 3],\n",
+       " [1, 3],\n",
+       " [1, 3],\n",
+       " [1, 4],\n",
+       " [1, 4],\n",
+       " [1, 4],\n",
+       " [1, 4],\n",
+       " [1, 4],\n",
+       " [1, 4],\n",
+       " [1, 4],\n",
+       " [1, 4],\n",
+       " [1, 4],\n",
+       " [1, 4],\n",
+       " [1, 4],\n",
+       " [1, 4],\n",
+       " [1, 4],\n",
+       " [1, 5],\n",
+       " [1, 5],\n",
+       " [1, 5],\n",
+       " [1, 5],\n",
+       " [1, 5],\n",
+       " [1, 5],\n",
+       " [1, 5],\n",
+       " [1, 5],\n",
+       " [1, 5],\n",
+       " [1, 5],\n",
+       " [1, 5],\n",
+       " [1, 5],\n",
+       " [1, 5],\n",
+       " [2, 1],\n",
+       " [2, 1],\n",
+       " [2, 1],\n",
+       " [2, 1],\n",
+       " [2, 1],\n",
+       " [2, 1],\n",
+       " [2, 1],\n",
+       " [2, 1],\n",
+       " [2, 1],\n",
+       " [2, 1],\n",
+       " [2, 1],\n",
+       " [2, 1],\n",
+       " [2, 1],\n",
+       " [2, 2],\n",
+       " [2, 2],\n",
+       " [2, 2],\n",
+       " [2, 2],\n",
+       " [2, 2],\n",
+       " [2, 2],\n",
+       " [2, 2],\n",
+       " [2, 2],\n",
+       " [2, 2],\n",
+       " [2, 2],\n",
+       " [2, 2],\n",
+       " [2, 2],\n",
+       " [2, 2],\n",
+       " [2, 3],\n",
+       " [2, 3],\n",
+       " [2, 3],\n",
+       " [2, 3],\n",
+       " [2, 3],\n",
+       " [2, 3],\n",
+       " [2, 3],\n",
+       " [2, 3],\n",
+       " [2, 3],\n",
+       " [2, 3],\n",
+       " [2, 3],\n",
+       " [2, 3],\n",
+       " [2, 3],\n",
+       " [2, 4],\n",
+       " [2, 4],\n",
+       " [2, 4],\n",
+       " [2, 4],\n",
+       " [2, 4],\n",
+       " [2, 4],\n",
+       " [2, 4],\n",
+       " [2, 4],\n",
+       " [2, 4],\n",
+       " [2, 4],\n",
+       " [2, 4],\n",
+       " [2, 4],\n",
+       " [2, 4],\n",
+       " [2, 5],\n",
+       " [2, 5],\n",
+       " [2, 5],\n",
+       " [2, 5],\n",
+       " [2, 5],\n",
+       " [2, 5],\n",
+       " [2, 5],\n",
+       " [2, 5],\n",
+       " [2, 5],\n",
+       " [2, 5],\n",
+       " [2, 5],\n",
+       " [2, 5],\n",
+       " [2, 5],\n",
+       " [3, 1],\n",
+       " [3, 1],\n",
+       " [3, 1],\n",
+       " [3, 1],\n",
+       " [3, 1],\n",
+       " [3, 1],\n",
+       " [3, 1],\n",
+       " [3, 1],\n",
+       " [3, 1],\n",
+       " [3, 1],\n",
+       " [3, 1],\n",
+       " [3, 1],\n",
+       " [3, 1],\n",
+       " [3, 2],\n",
+       " [3, 2],\n",
+       " [3, 2],\n",
+       " [3, 2],\n",
+       " [3, 2],\n",
+       " [3, 2],\n",
+       " [3, 2],\n",
+       " [3, 2],\n",
+       " [3, 2],\n",
+       " [3, 2],\n",
+       " [3, 2],\n",
+       " [3, 2],\n",
+       " [3, 2],\n",
+       " [3, 3],\n",
+       " [3, 3],\n",
+       " [3, 3],\n",
+       " [3, 3],\n",
+       " [3, 3],\n",
+       " [3, 3],\n",
+       " [3, 3],\n",
+       " [3, 3],\n",
+       " [3, 3],\n",
+       " [3, 3],\n",
+       " [3, 3],\n",
+       " [3, 3],\n",
+       " [3, 3],\n",
+       " [3, 4],\n",
+       " [3, 4],\n",
+       " [3, 4],\n",
+       " [3, 4],\n",
+       " [3, 4],\n",
+       " [3, 4],\n",
+       " [3, 4],\n",
+       " [3, 4],\n",
+       " [3, 4],\n",
+       " [3, 4],\n",
+       " [3, 4],\n",
+       " [3, 4],\n",
+       " [3, 4],\n",
+       " [3, 5],\n",
+       " [3, 5],\n",
+       " [3, 5],\n",
+       " [3, 5],\n",
+       " [3, 5],\n",
+       " [3, 5],\n",
+       " [3, 5],\n",
+       " [3, 5],\n",
+       " [3, 5],\n",
+       " [3, 5],\n",
+       " [3, 5],\n",
+       " [3, 5],\n",
+       " [3, 5],\n",
+       " [4, 1],\n",
+       " [4, 1],\n",
+       " [4, 1],\n",
+       " [4, 1],\n",
+       " [4, 1],\n",
+       " [4, 1],\n",
+       " [4, 1],\n",
+       " [4, 1],\n",
+       " [4, 1],\n",
+       " [4, 1],\n",
+       " [4, 1],\n",
+       " [4, 1],\n",
+       " [4, 1],\n",
+       " [4, 2],\n",
+       " [4, 2],\n",
+       " [4, 2],\n",
+       " [4, 2],\n",
+       " [4, 2],\n",
+       " [4, 2],\n",
+       " [4, 2],\n",
+       " [4, 2],\n",
+       " [4, 2],\n",
+       " [4, 2],\n",
+       " [4, 2],\n",
+       " [4, 2],\n",
+       " [4, 2],\n",
+       " [4, 3],\n",
+       " [4, 3],\n",
+       " [4, 3],\n",
+       " [4, 3],\n",
+       " [4, 3],\n",
+       " [4, 3],\n",
+       " [4, 3],\n",
+       " [4, 3],\n",
+       " [4, 3],\n",
+       " [4, 3],\n",
+       " [4, 3],\n",
+       " [4, 3],\n",
+       " [4, 3],\n",
+       " [4, 4],\n",
+       " [4, 4],\n",
+       " [4, 4],\n",
+       " [4, 4],\n",
+       " [4, 4],\n",
+       " [4, 4],\n",
+       " [4, 4],\n",
+       " [4, 4],\n",
+       " [4, 4],\n",
+       " [4, 4],\n",
+       " [4, 4],\n",
+       " [4, 4],\n",
+       " [4, 4],\n",
+       " [6, 7],\n",
+       " [6, 7],\n",
+       " [6, 7],\n",
+       " [6, 7],\n",
+       " [6, 7],\n",
+       " [6, 7],\n",
+       " [6, 7],\n",
+       " [6, 7],\n",
+       " [6, 7],\n",
+       " [6, 7],\n",
+       " [6, 7],\n",
+       " [6, 7],\n",
+       " [6, 7]]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_r"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deprecated: Writing CSV"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "#fname = \"{}_{}_{}_{}.csv\".format(alphabet, max_string_len, regex_chars, max_regex_len)\n",
+    "fname = \"test.csv\"\n",
+    "with open(fname, \"w\") as file:\n",
+    "    writer = csv.writer(file, delimiter=',', quoting=csv.QUOTE_ALL)\n",
+    "    writer.writerows(dataset_generator(max_regex_len, max_string_len, alphabet, regex_chars))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
