Added paper on learning program execution with LSTMs

--- a/code/KerasSandbox.ipynb
+++ b/code/KerasSandbox.ipynb
@@ -21,49 +21,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ischeinfeld/anaconda/lib/python3.6/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
-   "source": [
-    "import keras\n",
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def load_data(fname, test_split = 0.2):\n",
-    "    print 'Loading data...'\n",
-    "    df = pd.read_csv(config.Data.feature_matrix)\n",
-    "    df['encoded_msg'] = df['encoded_msg'].apply(lambda x: \\\n",
-    "        [int(e) for e in x.split()])\n",
-    "    df = df.reindex(random.permutation(df.index))\n",
+    "import numpy as np\n",
+    "import keras\n",
+    "from keras.preprocessing.text import Tokenizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def load_data(config, test_split = 0.2):\n",
+    "    print('Loading data...')\n",
+    "    X_r = np.load(config + \"_X_r.npy\")\n",
+    "    X_s = np.load(config + \"_X_s.npy\")\n",
+    "    y = np.load(config + \"_y.npy\")\n",
+    "    print('Data loaded.')\n",
+    "    return X_r, X_s, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data...\n",
+      "Data loaded.\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_r, X_s, y = load_data(\"test\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from random import seed\n",
+    "from random import randint\n",
+    "from math import ceil\n",
+    "from math import log10\n",
     "\n",
-    "    X_train = df['encoded_msg'].values[:int(len(df) * (1 - test_split))]\n",
-    "    y_train = array(df['was_blocked'].values[:int(len(df) * (1 - test_split))])\n",
+    "alphabet = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '+', ' ']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 1], [1, 3], [2, 4]]\n",
+      "[3, 4, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# generate lists of random integers and their sum\n",
+    "def random_sum_pairs(n_examples, n_numbers, largest):\n",
+    "    X, y = list(), list()\n",
+    "    for i in range(n_examples):\n",
+    "        in_pattern = [randint(1,largest) for _ in range(n_numbers)]\n",
+    "        out_pattern = sum(in_pattern)\n",
+    "        X.append(in_pattern)\n",
+    "        y.append(out_pattern)\n",
+    "    return X, y\n",
     "\n",
-    "    X_test = array(df['encoded_msg'].values[int(len(df) * (1 - test_split))])\n",
-    "    y_test = array(df['was_blocked'].values[int(len(df) * (1 - test_split))])\n",
+    "X, y = random_sum_pairs(3, 2, 4)\n",
+    "print(X)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2+1', '1+3', '2+4']\n",
+      "['3', '4', '6']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# convert data to strings\n",
+    "def to_string(X, y, n_numbers, largest):\n",
+    "    max_length = n_numbers * ceil(log10(largest+1)) + n_numbers - 1\n",
+    "    Xstr = list()\n",
+    "    for pattern in X:\n",
+    "        strp = '+'.join([str(n) for n in pattern])\n",
+    "        strp = ''.join([' ' for _ in range(max_length-len(strp))]) + strp\n",
+    "        Xstr.append(strp)\n",
+    "    max_length = ceil(log10(n_numbers * (largest+1)))\n",
+    "    ystr = list()\n",
+    "    for pattern in y:\n",
+    "        strp = str(pattern)\n",
+    "        strp = ''.join([' ' for _ in range(max_length-len(strp))]) + strp\n",
+    "        ystr.append(strp)\n",
+    "    return Xstr, ystr\n",
     "\n",
-    "    #return pad_sequences(X_train) ,y_train, X_test, y_test\n",
-    "    return X_train ,y_train, X_test, y_test"
+    "Xstr, ystr = to_string(X, y, 2, 4)\n",
+    "print(Xstr)\n",
+    "print(ystr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 10, 1], [1, 10, 3], [2, 10, 4]]\n",
+      "[[3], [4], [6]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# integer encode strings\n",
+    "def integer_encode(X, y, alphabet):\n",
+    "    char_to_int = dict((c, i) for i, c in enumerate(alphabet))\n",
+    "    Xenc = list()\n",
+    "    for pattern in X:\n",
+    "        integer_encoded = [char_to_int[char] for char in pattern]\n",
+    "        Xenc.append(integer_encoded)\n",
+    "    yenc = list()\n",
+    "    for pattern in y:\n",
+    "        integer_encoded = [char_to_int[char] for char in pattern]\n",
+    "        yenc.append(integer_encoded)\n",
+    "    return Xenc, yenc\n",
+    "\n",
+    "Xenc, yenc = integer_encode(Xstr, ystr, alphabet)\n",
+    "print(Xenc)\n",
+    "print(yenc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0], [0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]], [[0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0], [0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0]], [[0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0], [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0], [0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]]]\n",
+      "[[[0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0]], [[0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0]], [[0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# one hot encode\n",
+    "def one_hot_encode(X, y, max_int):\n",
+    "    Xenc = list()\n",
+    "    for seq in X:\n",
+    "        pattern = list()\n",
+    "        for index in seq:\n",
+    "            vector = [0 for _ in range(max_int)]\n",
+    "            vector[index] = 1\n",
+    "            pattern.append(vector)\n",
+    "        Xenc.append(pattern)\n",
+    "    yenc = list()\n",
+    "    for seq in y:\n",
+    "        pattern = list()\n",
+    "        for index in seq:\n",
+    "            vector = [0 for _ in range(max_int)]\n",
+    "            vector[index] = 1\n",
+    "            pattern.append(vector)\n",
+    "        yenc.append(pattern)\n",
+    "    return Xenc, yenc\n",
+    "\n",
+    "Xenc, yenc = one_hot_encode(Xenc, yenc, len(alphabet))\n",
+    "print(Xenc)\n",
+    "print(yenc)"
    ]
   },
   {
@@ -73,7 +246,25 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "seed(1)\n",
+    "n_samples = 1\n",
+    "n_numbers = 2\n",
+    "largest = 10\n",
+    "# generate pairs\n",
+    "X, y = random_sum_pairs(n_samples, n_numbers, largest)\n",
+    "print(X, y)\n",
+    "# convert to strings\n",
+    "X, y = to_string(X, y, n_numbers, largest)\n",
+    "print(X, y)\n",
+    "# integer encode\n",
+    "alphabet = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '+', ' ']\n",
+    "X, y = integer_encode(X, y, alphabet)\n",
+    "print(X, y)\n",
+    "# one hot encode\n",
+    "X, y = one_hot_encode(X, y, len(alphabet))\n",
+    "print(X, y)"
+   ]
   }
  ],
  "metadata": {
